--- a/app/backend/template/base.twig
+++ b/app/backend/template/base.twig
@@ -162,6 +162,12 @@
             </a>
         </div>
 
+        <div class="aside-widget">
+            <a href="/backend/users/ruoli/lista" class="menu-item">
+                <span class="lnr lnr-users"></span> Gestisci ruoli
+            </a>
+        </div>
+
 
     </div>
 
