--- a/app/backend/template/fields/select.twig
+++ b/app/backend/template/fields/select.twig
@@ -1,7 +1,9 @@
 <div class="form-group">
 
 
-    <label for="company" class=" form-control-label">{{ field.label ? field.label : property }}</label>
+    <label for="company" class=" form-control-label">{{ field.label ? field.label : property }}
+        <br><small>{{ field.hint }}</small>
+    </label>
 
     <div class="input-group">
         <div class="input-group-prepend">
