--- a/app/backend/template/fields/title.twig
+++ b/app/backend/template/fields/title.twig
@@ -1,5 +1,5 @@
 <div class="form-group">
-    <label for="company" class=" form-control-label">{{ property }}</label>
+    <label for="company" class=" form-control-label">{{ property }} <br><small>{{ field.hint }}</small></label>
 
     <div class="input-group input-group-lg">
         <div class="input-group-prepend">
