--- a/app/backend/template/parts/header.twig
+++ b/app/backend/template/parts/header.twig
@@ -6,7 +6,7 @@
         <div class="col-sm-7">
             <a id="menuToggle" class="menutoggle pull-left"><i class="fa fa fa-angle-left"></i></a>
             <div class="header-left">
-                <button class="search-trigger"><i class="lnr lnr-magnifier"></i></button>
+                <button class="search-trigger btn-icon"><i class="lnr lnr-magnifier"></i></button>
                 <div class="form-inline">
                     <form class="search-form">
                         <input class="form-control mr-sm-2" type="text" placeholder="Search ..." aria-label="Search">
@@ -27,7 +27,7 @@
             <!--<a id="userAreaToggle" class="menutoggle pull-right"><i class="fa fa fa-angle-right"></i></a>-->
 
             <div class="info-popup dropdown float-right">
-                <a href="" class="btn btn-light btn-icon float-right" data-toggle="dropdown"><span class="lnr lnr-layers"></span> </a>
+                <a href="" class="btn-icon" data-toggle="dropdown"><span class="lnr lnr-question-circle"></span> </a>
 
                 <div class="user-menu dropdown-menu" style="width: 400px;height: 400px;background: #fff">
                     <div class="pl-5 pr-5 pb-3 pt-3">
