Backend minor fix Added title to backend pages Added link to website frontend from backend

--- a/app/backend/template/parts/header.twig
+++ b/app/backend/template/parts/header.twig
@@ -42,6 +42,7 @@
                 </div>
             </div>
 
+            <a href="/" class="btn-icon float-right" ><span class="lnr lnr-earth" title="Vai al sito"></span> </a>
 
 
         </div>
