--- a/app/applications/main/widgets/views/widget_base.twig
+++ b/app/applications/main/widgets/views/widget_base.twig
@@ -1,6 +1,15 @@
-<div class="col-sm-{{ dimension == 3 ? "col-sm-12" : ( dimensione == 2 ? "col-xl-6" : "col-lg-3 col-md-6" ) }}">
-
+<div class="col-sm-{{ dimension == 3 ? "col-sm-12" : ( dimensione == 2 ? "col-xl-6" : "col-lg-4 col-md-4" ) }}">
+    <div class="dropdown float-right">
+        <button class="btn bg-transparent dropdown-toggle theme-toggle text-light" type="button" id="dropdownMenuButton" data-toggle="dropdown">
+            <i class="fa fa-cog"></i>
+        </button>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <div class="dropdown-menu-content">
+                <a class="dropdown-item" href="#"><i class="fa fa-edit mr-2"></i> Modifica</a>
+                <a class="dropdown-item" href="#"><i class="fa fa-trash mr-2"></i> Rimuovi</a>
+            </div>
+        </div>
+    </div>
    {% block content %}
-
    {% endblock %}
 </div>
