--- a/app/backend/template/parts/header.twig
+++ b/app/backend/template/parts/header.twig
@@ -18,13 +18,12 @@
                 <h4 class="text-white d-inline-block">{{ title }}</h4>
 
             </div>
-
-
-
         </div>
 
         <div class="col-sm-5">
             <!--<a id="userAreaToggle" class="menutoggle pull-right"><i class="fa fa fa-angle-right"></i></a>-->
+
+            {{ headermenu_right_buttons | raw}}
 
             <div class="info-popup dropdown float-right">
                 <a href="" class="btn-icon" data-toggle="dropdown"><span class="lnr lnr-question-circle"></span> </a>
@@ -41,7 +40,6 @@
                     </div>
                 </div>
             </div>
-
             <a href="/" class="btn-icon float-right" ><span class="lnr lnr-earth" title="Vai al sito"></span> </a>
 
 
