--- a/app/applications/pages/widgets/views/page_number.twig
+++ b/app/applications/pages/widgets/views/page_number.twig
@@ -8,7 +8,7 @@
         <ul>
             <li>
                 <strong><span class="count">{{ count }}</span></strong>
-                <span>Attive</span>
+                <span>Pagine totali</span>
             </li>
             <li>
                 <strong><span class="count">{{ inactivePages }}</span></strong>
