--- a/app/backend/assets/css/custom.css
+++ b/app/backend/assets/css/custom.css
@@ -905,3 +905,12 @@ input:checked + .slider:before {
 .slider.round:before {
     border-radius: 50%;
 }
+
+
+.widget{
+    background: #fff;
+    box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
+}
+.widget.card{
+    padding: 2em;
+}
