--- a/app/applications/main/widgets/views/widget_card.twig
+++ b/app/applications/main/widgets/views/widget_card.twig
@@ -1,20 +1,20 @@
  {% extends "main/widgets/views/widget_base.twig" %}
     {% block content %}
 
-        <div class="bg-flat-color-{{ color }}">
-            <div class="card text-white  ">
+     <div class="bg-flat-color-{{ color }}">
+            <div class="card text-white " style="width:100%">
                 <div class="card-body pb-0">
 
-                    <h4 class="mb-0">
-                        <span class="count">{{ value }}</span>
-                    </h4>
+                    {% block innercontent %}
+
+
                     <p class="text-light">{{ label }}</p>
 
 
                     <div class="chart-wrapper px-0" style="height:70px;" height="70">
                         <canvas id="widgetChart1"></canvas>
                     </div>
-
+                    {% endblock %}
                 </div>
 
             </div>
