--- a/app/backend/assets/css/custom.css
+++ b/app/backend/assets/css/custom.css
@@ -905,3 +905,10 @@ input:checked + .slider:before {
 .slider.round:before {
     border-radius: 50%;
 }
+
+
+
+
+.navbar .navbar-nav li.active .menu-icon, .navbar .navbar-nav li:hover .toggle_nav_button:before, .navbar .navbar-nav li .toggle_nav_button.nav-open:before{
+    color: #e16c08 !important;
+}
