--- a/app/backend/template/parts/header.twig
+++ b/app/backend/template/parts/header.twig
@@ -26,22 +26,23 @@
         <div class="col-sm-5">
             <!--<a id="userAreaToggle" class="menutoggle pull-right"><i class="fa fa fa-angle-right"></i></a>-->
 
-            <div class="info-popup dropdown float-right">
-                <a href="" class="btn-icon" data-toggle="dropdown"><span class="lnr lnr-question-circle"></span> </a>
+            {% if  application_info  %}
+                <div class="info-popup dropdown float-right">
+                    <a href="" class="btn-icon" data-toggle="dropdown"><span class="lnr lnr-question-circle"></span> </a>
 
-                <div class="user-menu dropdown-menu" style="width: 400px;height: 400px;background: #fff">
-                    <div class="pl-5 pr-5 pb-3 pt-3">
-                        <div class="text-center">
-                            <span class="lnr lnr-{{ application_info.icon }} h1"></span>
-                            <h5>{{ application_info.title }}</h5>
+                    <div class="user-menu dropdown-menu" style="width: 400px;height: 400px;background: #fff">
+                        <div class="pl-5 pr-5 pb-3 pt-3">
+                            <div class="text-center">
+                                <span class="lnr lnr-{{ application_info.icon }} h1"></span>
+                                <h5>{{ application_info.title }}</h5>
+                            </div>
+                            <hr>
+
+                            <p>{{ application_info.description }}</p>
                         </div>
-                        <hr>
-
-                        <p>{{ application_info.description }}</p>
                     </div>
                 </div>
-            </div>
-
+            {% endif %}
 
 
         </div>
