--- a/app/backend/assets/css/custom.css
+++ b/app/backend/assets/css/custom.css
@@ -920,3 +920,36 @@ input:checked + .slider:before {
 .widget.card{
     padding: 2em;
 }
+
+#icon-performance {
+
+    width: 1.8em;
+    height: 1.8em;
+    display: inline-block;
+    text-align: center;
+    border-radius: 100%;
+    padding-left: 0.1em;
+
+}
+#icon-performance.danger{
+    background: #f00;
+}
+
+@keyframes performanceBlink {
+    from { transform: scale(1);opacity:1}
+    to {transform: scale(1.5);
+    opacity: 0}
+}
+
+#icon-performance.danger:before{
+    content: '';
+    width:100%;
+    height:100%;
+    border-radius: 100%;
+    box-shadow: 0px 0px 0px 2px #f00;
+    animation: performanceBlink 500ms infinite reverse;
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
