Start search global

--- a/app/backend/template/parts/header.twig
+++ b/app/backend/template/parts/header.twig
@@ -8,9 +8,9 @@
             <div class="header-left">
                 <button class="search-trigger btn-icon"><i class="lnr lnr-magnifier"></i></button>
                 <div class="form-inline">
-                    <form class="search-form">
-                        <input class="form-control mr-sm-2" type="text" placeholder="Search ..." aria-label="Search">
-                        <button class="search-close" type="submit"><i class="fa fa-times"></i></button>
+                    <form class="search-form" action="/backend/main/search" >
+                        <input class="form-control mr-sm-2" type="text" placeholder="Search ..." aria-label="Search" name="s">
+                        <!--<button class="search-close" type="submit"><i class="fa fa-times"></i></button>-->
                     </form>
                 </div>
 
