--- a/app/applications/main/templates/dashboard-widgets.twig
+++ b/app/applications/main/templates/dashboard-widgets.twig
@@ -2,7 +2,7 @@
 
 {% if admin_user.checkPermission("backend.widgets.edit") %}
     {% set headermenu_right_buttons = '
-        <a href="javascript:void(0)" data-toggle="collapse" data-target="#widget-disponibili" class="btn-icon float-right ml-4" ><span class="lnr lnr-layers" title="Vai al sito"></span> </a>
+        <a href="javascript:void(0)" data-toggle="collapse" data-target="#widget-disponibili" class="btn-icon float-right " ><span class="lnr lnr-layers" title="Vai al sito"></span> </a>
     ' %}
 {% endif %}
 {% block content %}
