--- a/app/backend/template/base.twig
+++ b/app/backend/template/base.twig
@@ -37,6 +37,7 @@
 
 
     <link rel="stylesheet" href="/backend/assets/css/custom.css">
+    <link rel="stylesheet" href="/backend/assets/css/alerts.css">
 
     <!-- <script type="text/javascript" src="https://cdn.jsdelivr.net/html5shiv/3.7.3/html5shiv.min.js"></script> -->
 
@@ -73,6 +74,7 @@
     {% block styles %}
     {% endblock %}
 
+    <script src="/backend/assets/js/alerts.js"></script>
     <script src="/backend/assets/js/forms.js"></script>
     <script src="/backend/assets/js/main.js"></script>
     <script src="/backend/assets/js/image.js"></script>
