--- a/app/backend/template/parts/header.twig
+++ b/app/backend/template/parts/header.twig
@@ -48,7 +48,7 @@
 
 
             <div class="info-popup dropdown float-right mr-3">
-                <a href="" id="icon-performance" class="btn-icon" data-toggle="dropdown"><span class="lnr lnr-bug"></span> </a>
+                <a href="" id="icon-performance" class="btn-icon" data-toggle="dropdown"><span class="lnr lnr-heart-pulse"></span> </a>
 
                 <div class="user-menu dropdown-menu" style="width: 400px;height: 400px;background: #fff">
                     <div class="pl-5 pr-5 pb-3 pt-3">
