--- a/app/backend/template/parts/header.twig
+++ b/app/backend/template/parts/header.twig
@@ -42,7 +42,7 @@
                 </div>
             {% endif %}
 
-<a href="/" class="btn-icon float-right" ><span class="lnr lnr-earth" title="Vai al sito"></span> </a>
+            <a href="/" target="_blank" class="btn-icon float-right" ><span class="lnr lnr-earth" title="Vai al sito"></span> </a>
 
 
 
